--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,95 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+/* Custom color variables */
 :root {
+  --radius: 0.625rem;
+
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #1f2937;
+  /* gray-800 */
+
+  --card: #ffffff;
+  --card-foreground: #1f2937;
+
+  --popover: #ffffff;
+  --popover-foreground: #1f2937;
+
+  --primary: #4338ca;
+  /* indigo-700 */
+  --primary-foreground: #f9fafb;
+  /* gray-50 */
+
+  --secondary: #e5e7eb;
+  /* gray-200 */
+  --secondary-foreground: #1f2937;
+
+  --muted: #f3f4f6;
+  /* gray-100 */
+  --muted-foreground: #4b5563;
+  /* gray-600 */
+
+  --accent: #e5e7eb;
+  --accent-foreground: #1f2937;
+
+  --destructive: #ef4444;
+  /* red-500 */
+
+  --border: #e5e7eb;
+  /* gray-200 */
+  --input: #e5e7eb;
+  /* gray-200 */
+  --ring: #9ca3af;
+  /* gray-400 */
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.dark {
+  --background: #1f2937;
+  /* gray-800 */
+  --foreground: #f9fafb;
+  /* gray-50 */
+
+  --card: #374151;
+  /* gray-700 */
+  --card-foreground: #f9fafb;
+
+  --popover: #374151;
+  --popover-foreground: #f9fafb;
+
+  --primary: #6366f1;
+  /* indigo-500 */
+  --primary-foreground: #1f2937;
+
+  --secondary: #4b5563;
+  /* gray-600 */
+  --secondary-foreground: #f9fafb;
+
+  --muted: #4b5563;
+  --muted-foreground: #d1d5db;
+
+  --accent: #4b5563;
+  --accent-foreground: #f9fafb;
+
+  --destructive: #b91c1c;
+  /* red-700 */
+
+  --border: rgba(255, 255, 255, 0.1);
+  --input: rgba(255, 255, 255, 0.15);
+  --ring: #9ca3af;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+
+  /* Apply border and ring using CSS vars */
+  * {
+    @apply outline-none;
+    border-color: var(--border);
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    background-color: var(--background);
+    color: var(--foreground);
+    font-family: theme('fontFamily.sans');
+  }
 }
